tests/reference/asr-test_str_slicing-eca1381.stderr
semantic error: slice indices must be integers or None
 --> tests/errors/test_str_slicing.py:4:15
  |
4 |     print(s[1:2.2])
  |               ^^^ 
